# cv_debug_mate_cpp

./: .gitignore  .vscodeignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  README_CN.md  UNINITIALIZED_DETECTION.md  index.html  package-lock.json  package.json  replace_script.js  tsconfig.json  vec_x_data.csv
.github/workflows/: demo-build.yml  publish.yml
.kiro/specs/3d-array-multichannel-image/: design.md  requirements.md  tasks.md
.kiro/specs/adaptive-plot-ticks/: checkpoint-6-verification.md  design.md  final-verification.md  requirements.md  tasks.md
scripts/: build_test.sh  package.sh  publish.sh
src/: cvVariablesProvider.ts  extension.ts
src/matImage/: matProvider.ts  matWebview.ts
src/plot/: plotProvider.ts  plotWebview.ts
src/pointCloud/: pointCloudProvider.ts  pointCloudWebview.ts
src/test/: adaptiveTicks.test.ts
src/utils/: debugger.ts  logger.ts  opencv.ts  panelManager.ts  syncManager.ts
test_cpp/: .clangd  CMakeLists.txt  README.md  build.ps1  build.sh  build_clang.ps1  build_clang.sh  build_gcc.ps1  main.cpp
